    - update debian/control.in
  * Make the testsuite priority extra, section misc
    - update debian/control.in
  * The testsuite shouldn't depend on essential package libc-bin
    - update debian/control.in
  * Override symlink-is-self-recursive warning in the testsuite, as this is
    intentional
    - add debian/firefox-testsuite.lintian-overrides.in

 -- Chris Coulson <chris.coulson@canonical.com>  Wed, 03 Apr 2013 17:19:15 +0100

firefox-trunk (22.0~a1~hg20130329r126606-0ubuntu1-0ubuntu1) raring; urgency=low

  * New upstream snaphot v22.0 A1 HG20130329R126606

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * Make sure that the 'appname' field of our mozinfo.json is set to
    'firefox' and not 'firefox-trunk' on nightlies, as it breaks browser
    xpcshell tests
    - update debian/build/mozbuild.mk
    - add debian/build/fix-mozinfo-appname.py
  * Fix a space versus tab issue in debian/build/mozbuild.mk
  * Run make-buildsymbols after make install
    - update debian/build/mozbuild.mk
  * Refresh patches
    - update d/p/test-integration/xpcshell-output-valid-junit-xml.patch
    - update d/p/test-integration/mochitest-output-junit-xml.patch
    - update d/p/test-overrides/reftest-disable-failing-tests.patch
    - update debian/patches/ubuntu-ua-string-changes.patch
    - update debian/patches/no_neon_on_arm.patch
    - update d/p/test-overrides/xpcshell-disable-failing-tests.patch
    - update d/p/test-overrides/disable-failing-python-tests.patch
  * Remove obsolete patches
    - remove debian/patches/fix-makefile-substitution-bug.patch
  * Temporarily disable tests in python/mozbuild/mozpack/tests, as they
    fail
    - add d/p/test-overrides/disable-failing-python-tests.patch
    - update debian/patches/series.in
  * Unbreak test_ubuntu_searchplugins.js after the install layout changes
    - update debian/testing/xpcshell-package-tests/xpcshell.ini
  * Unbreak test_locale_matchOS.js after the install layout changes