@@ -58,6 +58,8 @@ firefox-trunk (23.0~a1~hg20130426r129904-0ubuntu1) UNRELEASED; urgency=low
   * Override symlink-is-self-recursive warning in the testsuite, as this is
     intentional
     - add debian/firefox-testsuite.lintian-overrides.in
+  * Remove the executable bit from the testsuite zip file
+    - update debian/build/rules.mk
 
  -- Chris Coulson <chris.coulson@canonical.com>  Wed, 03 Apr 2013 17:19:15 +0100
 
